Setup Google Gemini to automatically conduct code reviews

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ build-backend = "uv_build"
 [tool.basedpyright]
 reportAny = false
 reportExplicitAny = false
+ignore = [".github/*"]
+
 
 [dependency-groups]
 dev = []
